--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-4/int08-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-4/int08-4.component.html
@@ -73,8 +73,8 @@
     <table id="tableData" class="ui small celled table nowrap striped selectable" style="width: 100%">
       <thead>
         <tr>
+          <th style="text-align: center !important;"><input class="ui checkbox" type="checkbox" name="select-all" id="select-all" (click)="checkAll($event)"></th>
           <th style="text-align: center !important;">ลำดับที่</th>
-          <!-- <th style="text-align: center !important;">รหัสสำนักงานสรรพสามิต</th> -->
           <th style="text-align: center !important;">ชื่อสำนักงานสรรพสามิต</th>
           <th style="text-align: center !important;">ช่วงเดือนที่</th>
           <th style="text-align: center !important;">ถึงเดือนที่</th>
