--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-6/int08-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-6/int08-6.component.html
@@ -91,6 +91,7 @@
         <table id="dataTable" class="ui small celled table nowrap striped selectable" style="width: 100%">
             <thead>
                 <tr>
+                    <th style="text-align: center !important;"><input class="ui checkbox" type="checkbox" name="select-all" id="select-all" (click)="checkAll($event)"></th>
                     <th class="text-center">ลำดับที่</th>
                     <th class="text-center">เลขที่ใบเสร็จ</th>
                     <th class="text-center">วันที่จัดเก็บ</th>
