fix bug delete field

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-1/int06-11-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-1/int06-11-1.component.html
@@ -95,8 +95,7 @@
                         <div class="ui calendar" id="periodCld" style="width:100%;">
                             <div class="ui input left icon">
                                 <i class="calendar alter nate outline icon"></i>
-                                <input type="text" placeholder="เดือน" formControlName="period" autocomplete="off"
-                                    readonly="">
+                                <input type="text" placeholder="เดือน" formControlName="period" autocomplete="off" readonly="">
                             </div>
                         </div>
                     </div>
@@ -163,8 +162,7 @@
                         <div class="ui calendar" id="periodWithdrawCldform" style="width:100%;">
                             <div class="ui input left icon">
                                 <i class="calendar alter nate outline icon"></i>
-                                <input type="text" placeholder="เดือน" formControlName="periodWithdraw" autocomplete="off"
-                                    readonly="">
+                                <input type="text" placeholder="เดือน" formControlName="periodWithdraw" autocomplete="off" readonly="">
                             </div>
                         </div>
                     </div>
@@ -175,8 +173,7 @@
                         <div class="ui calendar" id="periodWithdrawCldto" style="width:100%;">
                             <div class="ui input left icon">
                                 <i class="calendar alter nate outline icon"></i>
-                                <input type="text" placeholder="เดือน" formControlName="periodWithdrawTo" autocomplete="off"
-                                    readonly="">
+                                <input type="text" placeholder="เดือน" formControlName="periodWithdrawTo" autocomplete="off" readonly="">
                             </div>
                         </div>
                     </div>
@@ -224,16 +221,14 @@
                         </div>
                         <div class="three wide field" [ngClass]="{'error': errorReceipt(i, 'receiptNo')}">
                             <div class="ui input">
-                                <input type="text" name="receiptNo{{i}}" id="receiptNo{{i}}" placeholder="เลขที่ใบเสร็จ"
-                                    formControlName="receiptNo">
+                                <input type="text" name="receiptNo{{i}}" id="receiptNo{{i}}" placeholder="เลขที่ใบเสร็จ" formControlName="receiptNo">
                             </div>
                         </div>
                         <div class="one wide field">
                             <label class="full-width text-right">จำนวน</label></div>
                         <div class="three wide field" [ngClass]="{'error': errorReceipt(i, 'receiptAmount')}">
                             <div class="ui input">
-                                <input type="text" numberOnly maxlength="10" id="receiptAmount{{i}}" placeholder="จำนวน"
-                                    name="receiptAmount{{i}}" formControlName="receiptAmount">
+                                <input type="text" numberOnly maxlength="10" id="receiptAmount{{i}}" placeholder="จำนวน" name="receiptAmount{{i}}" formControlName="receiptAmount">
                             </div>
                         </div>
                         <div class="one wide field">
@@ -243,13 +238,12 @@
                             <div class="ui calendar full-width" id="receiptD{{i}}">
                                 <div class="ui input left icon">
                                     <i class="calendar alter nate outline icon"></i>
-                                    <input type="text" formControlName="receiptDate" id="receiptDate{{i}}" name="receiptDate{{i}}"
-                                        autocomplete="off" [readonly]="true" placeholder="วว/ดด/ปปปป">
+                                    <input type="text" formControlName="receiptDate" id="receiptDate{{i}}" name="receiptDate{{i}}" autocomplete="off" [readonly]="true" placeholder="วว/ดด/ปปปป">
                                 </div>
                             </div>
                         </div>
                         <div class="one wide field">
-                            <button class="ui icon red mini button" type="button" (click)="removeReceipt(i)">
+                            <button class="ui icon red mini button" type="button" (click)="removeReceiptRH(i)">
                                 <i class="minus icon"></i>
                             </button>
                         </div>
@@ -290,8 +284,7 @@
                 </div>
                 <div class="six wide field upload-panel">
                     <input type="file" name="files" id="files" accept=".pdf, image/*, text/plain, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet,
-                    application/vnd.ms-excel,.doc,.docx"
-                        (change)="onChangeFile()">
+                    application/vnd.ms-excel,.doc,.docx" (change)="onChangeFile()">
                 </div>
                 <div class="three wide field">
                     <button class="ui mini yellow button" type="button" (click)="onUpload($event)" [ngClass]="{ 'disabled': flgOnLoad }">
