--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-4/int08-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-4/int08-4.component.html
@@ -78,8 +78,8 @@
           <th style="text-align: center !important;">ชื่อสำนักงานสรรพสามิต</th>
           <th style="text-align: center !important;">ช่วงเดือนที่</th>
           <th style="text-align: center !important;">ถึงเดือนที่</th>
-          <th style="text-align: center !important;">จำนวนใบเสร็จ</th>
-          <th style="text-align: center !important;">จำนวนใบเสีย</th>
+          <th style="text-align: center !important;">จำนวนใบเสร็จทั้งหมด</th>
+          <th style="text-align: center !important;">จำนวนใบเสร็จเสีย</th>
           <th style="text-align: center !important;">รายละเอียดความเสี่ยง</th>
         </tr>
       </thead>
