--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-6/int08-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-6/int08-6.component.html
@@ -32,12 +32,11 @@
                 </div>
 
                 <div class="inline fields">
-                    <div class="one wide field"></div>
-                    <div class="one wide field required">
+                    <div class="three wide field required">
                         <label class="text-right full-width">บัญชี</label>
                     </div>
 
-                    <div class="three wide field" [ngClass]="{ 'error': validateField('account') }">
+                    <div class="four wide field" [ngClass]="{ 'error': validateField('account') }">
                         <select class="ui dropdown ai search full-width" formControlName="account" id="account">
                         <option value="">กรุณาเลือก</option>
                         <option *ngFor="let data of accounts | async" [value]="data.value2">
@@ -49,7 +48,7 @@
                     <div class="three wide required field">
                         <label class="text-right full-width">ระยะเวลาที่ตรวจสอบ (ปีปฏิทิน)</label>
                     </div>
-                    <div class="three wide field ui calendar" id="calendar" [ngClass]="{ 'error': validateField('startDate') }">
+                    <div class="two wide field ui calendar" id="calendar" [ngClass]="{ 'error': validateField('startDate') }">
                         <div class="ui input left icon">
                             <i class="calendar alter nate outline icon"></i>
                             <input type="calendar" readonly="" id="startDate" formControlName="startDate" [attr.required]="true" autocomplete="off" placeholder="ดด/ปปปป">
@@ -58,7 +57,7 @@
                     <div class="one wide field">
                         <label class="text-center full-width">ถึง</label>
                     </div>
-                    <div class="three wide field ui calendar" id="calendar1" [ngClass]="{ 'error': validateField('endDate') }">
+                    <div class="two wide field ui calendar" id="calendar1" [ngClass]="{ 'error': validateField('endDate') }">
                         <div class="ui input left icon">
                             <i class="calendar alter nate outline icon"></i>
                             <input type="calendar" readonly="" id="endDate" formControlName="endDate" [attr.required]="true" autocomplete="off" placeholder="ดด/ปปปป">
@@ -71,7 +70,7 @@
                 <div class="ui center aligned grid">
                     <div class="eight wide column">
                         <button class="ui mini primary button" type="submit">
-                          <i class="search icon"></i>ค้นหา
+                          <i class="search icon"></i>วิเคราะห์ข้อมูลเบื้องต้น
                         </button>
                         <button class="ui mini button" type="reset" (click)="onReset()">
                             <i class="refresh icon"></i>ล้างข้อมูล
