--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010600/tsl010600.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010600/tsl010600.component.html
@@ -42,10 +42,10 @@
         <i class="edit icon"></i>
         ตรวจสอบ
       </button>
-      <div class="ui icon deny button">
+      <button class="ui icon deny button" type="button" (click)="onCancel()">
         <i class="close icon"></i>
         ยกเลิก
-      </div>
+      </button>
     </div>
   </div>
 </div>
