--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-14/int06-14.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-14/int06-14.component.html
@@ -73,7 +73,7 @@
                         <label class="text-right right full-width">จำนวนครั้งในการเบิกเงิน</label>
                     </div>
                     <div class="four wide field" [ngClass]="{ 'error': validateField('withdrawAmount') }">
-                        <input type="text" formControlName="withdrawAmount">
+                        <input type="text" formControlName="withdrawAmount" numberOnly>
                     </div>
                     <div class="three wide field">
                         <label>ครั้ง</label>
