--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010100/tsl010100.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/tax-audit-select-line/tsl000000/tsl010000/tsl010100/tsl010100.component.html
@@ -40,8 +40,8 @@
         <!-- row 2 -->
         <br><br>
         <div class="inline fields  ui grid">
-            <div class="two wide field"></div>
-          <div class="four wide field">
+            <div class="three wide field"></div>
+          <div class="two wide field">
             <label class="text-center full-width">เงื่อนไขที่ 1 </label>
           </div>
           <div class="six wide field">
@@ -68,8 +68,8 @@
         <!-- row 4 -->
         <br><br>
         <div class="inline fields  ui grid">
-            <div class="two wide field"></div>
-          <div class="four wide field">
+            <div class="three wide field"></div>
+          <div class="two wide field">
             <label class="text-center full-width">เงื่อนไขที่ 2</label>
           </div>
           <div class="six wide field ">
@@ -129,16 +129,17 @@
           </div>
         </div>
         <br><br>
+        <!-- row 8 -->
         <div class="inline fields  ui grid">
-            <div class="two wide field"></div>
-          <div class="four wide field">
+            <div class="three wide field"></div>
+          <div class="two wide field">
             <label class="text-center full-width">เงื่อนไขที่ 3</label>
           </div>
           <div class="seven wide field ">
             <b>เปรียบเทียบความแต่งต่างการชำระภาษีระหว่างปี</b>
           </div>
         </div>
-        <!-- row 8 -->
+        <!-- row 9 -->
         <div class="inline fields  ui grid">
             <div class="two wide field"></div>
           <div class="two wide field"></div>
@@ -156,7 +157,7 @@
           </div>
         </div>
 
-        <!-- row 9 -->
+        <!-- row 10 -->
         <div class="inline fields  ui grid">
             <div class="two wide field"></div>
           <div class="two wide field"></div>
@@ -174,7 +175,7 @@
           </div>
         </div>
 
-        <!-- row 10-->
+        <!-- row 11-->
         <div class="inline fields  ui grid">
             <div class="two wide field"></div>
           <div class="two wide field"></div>
