--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-7/int08-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-7/int08-7.component.html
@@ -61,8 +61,18 @@
                 <div class="two wide field">
                   <label>ส่วนราชการ</label>
                 </div>
-                <div class="four wide field">
+                <div class="ten wide field">
                   <input type="text" id="government" name="government" [(ngModel)]="obj.government">
+                </div>
+              </div>
+
+              <div class="inline fields">
+                <div class="two wide field"></div>
+                <div class="two wide field">
+                  <label>ที่</label>
+                </div>
+                <div class="four wide field">
+                  <input type="text" id="documentNo" name="documentNo" >
                 </div>
                 <div class="one wide field"></div>
                 <div class="one wide field">
@@ -81,14 +91,18 @@
                 <div class="two wide field">
                   <label>เรื่อง</label>
                 </div>
-                <div class="five wide field">
+                <div class="ten wide field">
                   รายงานผลการตรวจสอบรายได้
                 </div>
-                <div class="one wide field">
+              </div>
+
+              <div class="inline fields">
+                 <div class="two wide field"></div>
+                <div class="two wide field">
                   <label> เรียน
                   </label>
                 </div>
-                <div class="four wide field">
+                <div class="ten wide field">
                   <input type="text" id="study" name="study" [(ngModel)]="obj.study">
                 </div>
               </div>
