--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -169,6 +169,7 @@
                     <a class="item " [routerLink]="[ '/int06/6'] " *ngIf="authService.renderByPage('int06/6')" routerLinkActive="active ">ทะเบียนคุม KTB - Corporate</a> -->
                     <a class="item " [routerLink]="[ '/int06/14'] " *ngIf="authService.renderByPage('int06/14')" routerLinkActive="active ">ตรวจสอบจำนวนครั้งในการเบิก</a>
                     <a class="item " [routerLink]="[ '/int06/15'] " *ngIf="authService.renderByPage('int06/15')" routerLinkActive="active ">ตรวจสอบจำนวนเงินที่เบิกเกิน</a>
+                    <a class="item " [routerLink]="[ '/int06/16'] " *ngIf="authService.renderByPage('int06/16')" routerLinkActive="active ">รายงานการตรวจสอบ</a>
                     <!-- <a class="item " [routerLink]="[ '/int06/3'] " *ngIf="authService.renderByPage('int06/3')"
                         routerLinkActive="active ">กระดาษทำการตรวจสอบวันปฏิบัติงาน</a>
                         <a class="item " [routerLink]="[ '/int06/7'] "  *ngIf="authService.renderByPage('int06/3')"
