--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-15/int06-15.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-15/int06-15.component.html
@@ -98,7 +98,9 @@
 
           <div class="ui center aligned grid" style="margin-top: 20px;">
             <div class="sixteen wide column">
-
+                <button class="ui mini primary button" type="button" (click)="save()">
+                    <i class="save icon"></i>บันทึกรายการที่เลือก
+                </button>
               <button class="ui mini primary button" type="button" (click)="export()">
                 <i class="print plane icon"></i> ส่งออกไฟล์ Excel
               </button>
