--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -349,7 +349,7 @@
 
             <div id="userDetail" style="text-align: right"></div>
         </div>
-        <a class="item " *ngIf="authService.getLogin() " (click)="logout() " style=" color:White ">ออกจากระบบ</a>
+        <a class="item " *ngIf="authService.getLogin() " (click)="logout() " style=" color:White "><i class="power off  icon"></i></a>
     </div>
 </div>
 <div class="ui tiny test modal transition hidden baiwa-alert" style="height: 0;">
