--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-7/int08-7.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-7/int08-7.component.html
@@ -72,7 +72,7 @@
                   <label>ที่</label>
                 </div>
                 <div class="four wide field">
-                  <input type="text" id="documentNo" name="documentNo" >
+                  <input type="text" id="documentNo" name="documentNo" [(ngModel)]="obj.documentNo">
                 </div>
                 <div class="one wide field"></div>
                 <div class="one wide field">
