--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-4/int08-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-4/int08-4.component.html
@@ -87,8 +87,10 @@
     <br>
     <div class="ui center aligned grid">
       <div class="sixteen wide column">
-        <button class="ui mini yellow button" (click)="saveData()">
-          <i class="print icon"></i>ส่งออกไฟล์ Excel</button>
+        <button class="ui mini primary button" (click)="saveData()">
+          <i class="check icon"></i>เลือกรายการ</button>
+          <button class="ui mini yellow button" (click)="exportFile2()">
+            <i class="print icon"></i>ส่งออกไฟล์ Excel</button>
       </div>
     </div>
     <br>
