--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-6/int08-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-6/int08-6.component.html
@@ -105,7 +105,7 @@
         <br>
         <div class="ui center aligned grid">
             <div class="sixteen wide column">
-                <button class="ui mini primary button" (click)="getCheckBox($event)">
+                <button class="ui mini primary button" (click)="saveData()">
                     <i class="check icon"></i>
                     เลือกรายการ
                 </button>
