add condition search createdBy on click search

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-5/int06-11-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-5/int06-11-5.component.html
@@ -39,7 +39,7 @@
 </div>
 <div class="ui form">
     <div class="ui attached segment">
-        <table id="dataTable" class="ui small celled table aligned hover striped selectable" style="width:100%">
+        <table id="dataTable" class="ui small celled table aligned hover striped selectable nowrap" style="width:100%">
             <thead>
                 <tr>
                     <th class="text-center">ผู้เบิก</th>
