--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-8/int06-11-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-8/int06-11-8.component.html
@@ -13,7 +13,7 @@
           <div class="two wide field">
             <label class="text-right full-width">ประเภทการขอเบิก</label>
           </div>
-          <div class="four wide field">
+          <div class="five wide field">
             <select class="ui dropdown ai search full-width" formControlName="withdrawRequest" id="withdrawRequest">
               <option value="">กรุณาเลือก</option>
               <option *ngFor="let wdr of withdrawRequestList | async;" [value]="wdr.lovId">
