fix bug from defect

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-15/int06-15.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-15/int06-15.component.html
@@ -2,7 +2,7 @@
 <br>
 
 <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-  <span>ตรวจสอบจำนวนเงินที่เบิกเกิน</span>
+  <span>ตรวจสอบจำนวนเงินที่เบิกเกิน (ครั้ง/เดือน)</span>
 </div>
 <form [formGroup]="formControl" >
   <div class="ui attached segment">
@@ -62,7 +62,7 @@
             <input type="text" name="money" id="money" formControlName="money" numberOnly>
           </div>
           <div class="three wide field">
-            <label>บาท</label>
+            <label>บาท (ครั้ง/เดือน)</label>
           </div>
         </div>
         <div class="ui center aligned grid">
