--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-6/int08-6.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-6/int08-6.component.html
@@ -93,8 +93,10 @@
                 <tr>
                     <th style="text-align: center !important;"><input class="ui checkbox" type="checkbox" name="select-all" id="select-all" (click)="checkAll($event)"></th>
                     <th class="text-center">ลำดับที่</th>
+                    <th class="text-center">บัญชี</th>
                     <th class="text-center">เลขที่ใบเสร็จ</th>
-                    <th class="text-center">วันที่จัดเก็บ</th>
+                    <th class="text-center">วันที่ใบเสร็จ</th>
+                    <th class="text-center">วันที่จัดเก็บ (วันที่รับรู้รายได้)</th>
                     <th class="text-center">วันที่นำฝาก</th>
                     <th class="text-center">เงินจัดเก็บ</th>
                     <th class="text-center">เงินนำฝาก</th>
